--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 [dependencies]
 dirs = "5.0"
 colored = "2.1"
+egui = "0.31.1"
+eframe = "0.31.1"
+rfd = "0.12.1"
+anyhow = "1.0"
+log = "0.4"
+env_logger = "0.10"
